# mozjs

./: .clang-format  .gitattributes  .gitignore  .travis.yml  Cargo.toml  Cross.toml  PULL_REQUEST_TEMPLATE.md  README  README.md  android-build  appveyor.yml  build.rs  makefile.cargo  ohos-build  rust-toolchain.toml  start-shell.bat
examples/embedder_allocator/: Cargo.toml  Readme.md  build.py  build.rs
examples/embedder_allocator/mimalloc/include/: servo_embedder_allocator.h  servo_embedder_malloc_prefix.h  servo_embedder_memory_wrap.h
examples/embedder_allocator/src/: main.rs
mozjs/: Cargo.toml  README  README.md  build.rs  configure.py  makefile.cargo  moz.build  moz.configure
mozjs-sys/: Cargo.toml  build.rs  makefile.cargo
mozjs-sys/etc/: COMMIT  create_patch.py  filters.txt  get_git_mozjs.py  get_latest_mozjs.py  get_latest_mozjs.sh  get_mozjs.sh  get_taskcluster_mozjs.py  get_taskcluster_mozjs.sh  sm-security-bump.py  update.py
mozjs-sys/etc/patches/: 0005-Do-not-rely-on-internal-.cargo-config.patch  0009-Introduce-with-android-ndk-version-and-with-android-.patch  0018-Don-t-include-rust.configure-anymore.patch  0024-bindgen-fixes.patch  0026-js-streams.patch  0029-fix-ld64-detection.patch  0030-autoconf-add-ohos.patch  0031-no-rust-unicode-bidi.patch  0032-macos-sdk-min-14-2.patch  0033-no-zlib.patch  0033-zlib.patch  0034-build__Add_compile_definition_for_ohos.patch  0035-Fix_mmap_for_JIT_on_HOS_Beta2.patch  0036-Redirect_errors_to_hilog_on_OpenHarmony.patch  0037-downgrade-ndk.patch  0038-more-bindgen-fixes.patch  0039-remove-static-assert.patch  0040-remove-nonconstexpr-assertion.patch  0041-fix-response-file-check.patch  0041-use-icu_capi-headers-from-cargo.patch  0042-delete-jinja.patch  0043-Minimize-required-dirs-for-publish.patch  0044-CurrentGlobalHandle.patch  0045-python-deprecated.patch  D194086.patch  bug1857492.patch
mozjs-sys/mozjs/: .gitignore  .hgignore  README  moz.build  moz.configure
mozjs-sys/mozjs/config/: milestone.txt  recurse.mk  rules.mk  system-headers.mozbuild
mozjs-sys/mozjs/intl/components/: moz.build
mozjs-sys/mozjs/js/: moz.configure
mozjs-sys/mozjs/js/public/: CallArgs.h  CharacterEncoding.h  ColumnNumber.h  CompileOptions.h  GlobalObject.h  ProtoKey.h  Proxy.h  RealmOptions.h  TypeDecls.h  Utility.h  Value.h  Wrapper.h
mozjs-sys/mozjs/js/src/: jsapi.cpp  moz.build  old-configure
mozjs-sys/mozjs/memory/mozalloc/: mozalloc.cpp  mozalloc_abort.cpp
mozjs-sys/mozjs/mfbt/: AllocPolicy.h  Assertions.h  DbgMacro.h  StringBuffer.h  moz.build
mozjs-sys/mozjs/mozglue/interposers/: env_interposer.cpp
mozjs-sys/mozjs/mozglue/misc/: Debug.cpp
mozjs-sys/mozjs/python/sites/: update.txt
mozjs-sys/src/: glue.rs  jsapi.cpp  jsapi.hpp  jsgc.rs  jsglue.cpp  jsglue.hpp  jsid.rs  jsimpls.rs  jsval.rs  lib.rs  trace.rs
mozjs-sys/src/custom_alloc/: mozjs_embedder_malloc_wrap.h  servo_embedder_memory_wrap.h
mozjs-sys/tests/: streams_available.rs
mozjs/benches/: latin1_string_conversion.rs
mozjs/config/: baseconfig.mk  nsinstall.py
mozjs/etc/: COMMIT
mozjs/etc/patches/: 0020-jitspew.patch
mozjs/examples/: eval.rs  minimal.rs  wasm.rs
mozjs/js/: moz.configure
mozjs/js/public/: CallArgs.h  Class.h  CompileOptions.h  GCAPI.h  MemoryMetrics.h  Principals.h  Proxy.h  RootingAPI.h  StructuredClone.h  TracingAPI.h  Value.h  Wrapper.h
mozjs/js/rust/: .gitignore  Cargo.toml  README.md  bindgen-flags.in  build.rs
mozjs/js/rust/src/: conversions.rs  glue.rs  heap.rs  jsglue.cpp  jsval.rs  lib.rs  rust.rs  sc.rs  typedarray.rs
mozjs/js/rust/tests/: callback.rs  enumerate.rs  evaluate.rs  panic.rs  rooting.rs  runtime.rs  stack_limit.rs  typedarray.rs  vec_conversion.rs
mozjs/js/src/: Cargo.toml  build.rs  configure  js-config.h.in  jsapi.cpp  jsapi.h  jsatom.cpp  jscntxt.cpp  jsfriendapi.h  jspubtd.h  jsscript.cpp  make-source-package.sh  moz.build  old-configure  old-configure.in
mozjs/js/src/builtin/: Intl.cpp  TestingFunctions.cpp
mozjs/js/src/ds/: MemoryProtectionExceptionHandler.cpp
mozjs/js/src/gc/: Memory.cpp
mozjs/js/src/jit/: GenerateCacheIRFiles.py  IonAnalysis.cpp  JitSpewer.cpp  JitSpewer.h  LIR.cpp  Lowering.cpp  ProcessExecutableMemory.cpp  RangeAnalysis.cpp  Snapshots.cpp  WarpOracle.cpp
mozjs/js/src/jsapi-tests/: moz.build  testEvaluateSelfHosted.cpp  testStructuredClone.cpp
mozjs/js/src/shell/: js.cpp
mozjs/js/src/util/: GetPidProvider.h  StructuredSpewer.h
mozjs/js/src/vm/: PosixNSPR.cpp  PosixNSPR.h  Printer.cpp  Runtime.cpp  Runtime.h  SelfHosting.cpp  SelfHosting.h  Time.cpp
mozjs/js/src/wasm/: WasmGenerator.cpp  WasmSignalHandlers.cpp
mozjs/mfbt/: LinkedList.h  RandomNum.cpp  Types.h  WindowsVersion.h  moz.build
mozjs/mozglue/misc/: DynamicallyLinkedFunctionPtr.h  StackWalk.cpp  WindowsUnicode.cpp  moz.build
mozjs/mozjs/: Cargo.toml  README
mozjs/mozjs/js/: moz.configure
mozjs/mozjs/js/public/: Proxy.h
mozjs/mozjs/js/src/: old-configure  old-configure.in
mozjs/python/mozbuild/mozbuild/: vendor_rust.py  (+1 more)
mozjs/python/which/: build.py
mozjs/spidermonkey/: .gitignore  README.md  build-engine.sh  download-engine.sh  gecko-repository  gecko-revision  object-files.list  rebuild.sh  rust-toolchain.toml
mozjs/src/: context.rs  conversions.rs  dl_and_gen_noGC.py  error.rs  generate_wrappers.py  generate_wrappers.sh  glue2_wrappers.in.rs  glue_wrappers.in  glue_wrappers.in.rs  jsapi2_wrappers.in.rs  jsapi_wrappers.in  jsapi_wrappers.in.rs  jsglue.cpp  jsglue.hpp  jsimpls.rs  lib.rs  offthread.rs  realm.rs  rust.rs  typedarray.rs
mozjs/src/gc/: collections.rs  custom.rs  macros.rs  mod.rs  root.rs  trace.rs
mozjs/tests/: callback.rs  capture_stack.rs  compile_tests.rs  custom_auto_rooter.rs  custom_auto_rooter_macro.rs  enforce_range.rs  enumerate.rs  evaluate.rs  external_string.rs  handle_gc.rs  iterate_stack.rs  jsvalue.rs  offthread.rs  panic.rs  property_descriptor.rs  range.rs  rootable.rs  rooted_traceable_box.rs  rooted_vec.rs  rooting.rs  runtime.rs  runtime_no_outlive.rs  stack_gc_vector.rs  stack_limit.rs  typedarray.rs  typedarray_panic.rs  vec_conversion.rs
(+160 files in other folders)
