[package]
name = "mozjs_sys"
description = "System crate for the Mozilla SpiderMonkey JavaScript engine."
repository.workspace = true
version = "0.128.9-1"
authors = ["Mozilla"]
links = "mozjs"
license.workspace = true
exclude = [
  "mozjs/js/src/tests/**",
  "mozjs/js/src/octane/**",
  "mozjs/js/src/jit-test/**",
  "mozjs/js/src/jsapi-tests/**",
  "mozjs/js/src/doc/**",
]
edition.workspace = true

[lib]
name = "mozjs_sys"
# The generated jsapi.rs contains #[doc] strings which look like
# doctests but are definitely not.
doctest = false

[features]
debugmozjs = []
profilemozjs = []
jitspew = []
crown = []
oom_with_hook = []

[dependencies]
libc.workspace = true
# SM depends on them and we provide them using cargo
libz-sys = "1.1.19"
encoding_c = "0.9.8"
encoding_c_mem = "0.2.6"
# unicode-bidi-ffi = { path = "./mozjs/intl/bidi/rust/unicode-bidi-ffi" }
icu_capi = "1.4.0" # keep in sync with intl/icu_capi/Cargo.toml

[build-dependencies]
bindgen.workspace = true
cc.workspace = true
walkdir = "2"
flate2 = "1"
tar = "0.4"
