[package]
name = "mozjs_sys"
description = "System crate for the Mozilla SpiderMonkey JavaScript engine."
repository.workspace = true
version = "0.140.0-1"
authors = ["Mozilla"]
links = "mozjs"
license.workspace = true
exclude = [
  "mozjs/js/src/tests/**",
  "mozjs/js/src/octane/**",
  "mozjs/js/src/jit-test/**",
  "mozjs/js/src/jsapi-tests/**",
  "mozjs/js/src/doc/**",
]
edition.workspace = true

[lib]
name = "mozjs_sys"
# The generated jsapi.rs contains #[doc] strings which look like
# doctests but are definitely not.
doctest = false

[features]
debugmozjs = []
profilemozjs = []
jitspew = []
crown = []
oom_with_hook = []

[dependencies]
libc.workspace = true
libz-rs-sys = { version = "0.5.1", features = ["export-symbols"] }
encoding_c = "0.9.8"
encoding_c_mem = "0.2.6"
# unicode-bidi-ffi = { path = "./mozjs/intl/bidi/rust/unicode-bidi-ffi" }
# keep in sync with intl/icu_capi/Cargo.toml
icu_capi = { version = "=1.5.0", default-features = false, features = ["compiled_data", "icu_calendar", "icu_properties", "icu_segmenter"] }

[build-dependencies]
bindgen.workspace = true
cc.workspace = true
walkdir = "2"
flate2 = "1"
tar = "0.4"
cargo_metadata = "0.20.0"
