[package]
name = "mozjs_sys"
description = "System crate for the Mozilla SpiderMonkey JavaScript engine."
repository.workspace = true
version = "0.140.7-2"
authors = ["Mozilla", "The Servo Project Developers"]
links = "mozjs"
license.workspace = true
exclude = ["__pycache__", "/etc/", "/mozjs/.cargo/"]
edition.workspace = true

[lib]
name = "mozjs_sys"
# The generated jsapi.rs contains #[doc] strings which look like
# doctests but are definitely not.
doctest = false

[features]
debugmozjs = []
profilemozjs = []
jit = []
jitspew = []
libz-sys = ["dep:libz-sys"]
libz-rs = ["dep:libz-rs-sys"]
intl = ["dep:icu_capi"]
crown = []
oom_with_hook = []

[dependencies]
libc.workspace = true
encoding_c = "0.9.8"
encoding_c_mem = "0.2.6"
# unicode-bidi-ffi = { path = "./mozjs/intl/bidi/rust/unicode-bidi-ffi" }
# keep in sync with intl/icu_capi/Cargo.toml
icu_capi = { version = "=1.5.0", default-features = false, features = [
  "compiled_data",
  "icu_calendar",
  "icu_properties",
  "icu_segmenter",
], optional = true }

libz-rs-sys = { version = "0.5.1", features = [
  "export-symbols",
], optional = true }
# SM depends on them and we provide them using cargo
libz-sys = { version = "1.1.19", default-features = false, features = [
  "libc",
  "stock-zlib",
], optional = true }

[build-dependencies]
bindgen.workspace = true
cc.workspace = true
walkdir = "2"
flate2 = "1"
tar = "0.4"
