[package]
name = "mozjs"
description = "Rust bindings to the Mozilla SpiderMonkey JavaScript engine."
repository.workspace = true
version = "0.14.1"
authors = ["The Servo Project Developers"]
license.workspace = true
edition.workspace = true

[lib]
doctest = false

[features]
debugmozjs = ['mozjs_sys/debugmozjs']
jitspew = ['mozjs_sys/jitspew']
profilemozjs = ['mozjs_sys/profilemozjs']
crown = ['mozjs_sys/crown']

[dependencies]
libc.workspace = true
log = "0.4"
mozjs_sys = { path = "../mozjs-sys" }

[build-dependencies]
cc.workspace = true
bindgen.workspace = true
