[package]
name = "mozjs"
description = "Rust bindings to the Mozilla SpiderMonkey JavaScript engine."
repository.workspace = true
version = "0.15.4"
authors = ["The Servo Project Developers"]
license.workspace = true
edition.workspace = true

[lib]
doctest = false

[features]
default = ["jit", "libz-sys", "intl"]
debugmozjs = ["mozjs_sys/debugmozjs"]
profilemozjs = ["mozjs_sys/profilemozjs"]
jit = ['mozjs_sys/jit']
jitspew = ["mozjs_sys/jitspew"]
libz-sys = ["mozjs_sys/libz-sys"]
libz-rs = ["mozjs_sys/libz-rs"]
intl = ["mozjs_sys/intl"]
crown = ["mozjs_sys/crown"]


[dependencies]
encoding_rs = "0.8.35"
libc.workspace = true
log = "0.4"
# When doing non-version changes also update ../mozjs-sys/etc/sm-security-bump.py
mozjs_sys = { version = "=0.140.7-2", path = "../mozjs-sys" }
num-traits = "0.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
criterion = { version = "0.6", default-features = false, features = [
    "html_reports",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.6"

[build-dependencies]
cc.workspace = true
bindgen.workspace = true


[[bench]]
name = "latin1_string_conversion"
harness = false
